--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services - Dave Conneely Construction</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/sass/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body id="services">
@@ -48,15 +48,15 @@
         </div>
 
         <div class="column ">
-            <div class="col-2">
-                <img src="/assets/images/playset.webp" alt="Playset">
-            </div>
+
             <div class="col-2">
                 <h2 class="title">Installation</h2>
                 <p>Theres no need to worry about the installation we can handle all that for you, from sourcing the
                     materials and equipment to removing excess soil and debris we have it all under control.</p>
             </div>
-
+            <div class="col-2">
+                <img src="/assets/images/playset.webp" alt="Playset">
+            </div>
         </div>
 
         <div class="column ">
@@ -76,34 +76,34 @@
 
         <div class="column ">
 
-            <div class="col-2">
-                <img src="/assets/images/playground.webp" alt="Playground">
-            </div>
+
 
             <div class="col-2">
                 <h2 class="title"> Accessibility</h2>
                 <p>We have a wide range of colours and sizes to suit any playhouse size. We can also provide you
                     with a custom design to suit your needs. </p>
             </div>
-
+            <div class="col-2">
+                <img src="/assets/images/playground.webp" alt="Playground">
+            </div>
         </div>
 
 
 
-    <div class="column ">
+        <div class="column ">
 
-        <div class="col-2">
-            <h2 class="title">Other Services</h2>
-            <ul>
-                <li>Bark mulch available for delivery.</li>
-                <li>Tipper Van available, suitable for removal of gardens, stone and small loads.</li>
-                <li>Small dumper available also.</li>
-            </ul>
-        </div>
-        <div class="col-2">
-        </div>
+            <div class="col-2">
+                <h2 class="title">Other Services</h2>
+                <ul>
+                    <li>Bark mulch available for delivery.</li>
+                    <li>Tipper Van available, suitable for removal of gardens, stone and small loads.</li>
+                    <li>Small dumper available also.</li>
+                </ul>
+            </div>
+            <div class="col-2">
+            </div>
 
-    </div>
+        </div>
 
     </div>
 
