--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Dave Conneely Construction</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/sass/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body id="contact">
