--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Dave Conneely Construction</title>
     <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/sass/main.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 
 <body>
@@ -67,7 +67,7 @@
 
             <div class="sales-point-box">
                 <img class="icon" src="assets/images/sales-point-3.svg" alt="">
-                <h3>Installation fix links</h3>
+                <h3>Installation</h3>
                 <p>We will install and make sure the new playhouse is secured safely to the foundation and remains for years to come.</p>
                 <a class="button cta-btn" href="services.html">See More</a>
 
@@ -83,11 +83,16 @@
         <div class="container grid">
             <h2 class="title">Our Story</h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
-                deserunt mollit anim id est laborum.
+            <p>
+                From Co. Galway, We have been providing quality construction services to our clients for over
+                30 years. We pride ourselves on our quality workmanship.
+                We are a team of highly skilled and experienced professionals who are dedicated to providing the best
+                service to our clients. 
+
+                We pay special attention to the quality of our work and providing a safe playarea for our clients.
+                We offer a range of services to our clients including: ground preparation, rubber safety matting, and playhouse installation,
+                more of which can be seen <a href="services.html" class="body-link">here</a>.
+
             </p>
         </div>
 
@@ -116,7 +121,7 @@
                 <div class="sales-point">
                     <img class="icon" src="assets/images/why-us-point-3.svg" alt="">
                     <h3>Experienced</h3>
-                    <p>With xx years in construction and xx years in installing playground we know what were at and can guarantee quality and expertise. </p>
+                    <p>With 30 years in construction and 5 years in installing playground we know what were at and can guarantee quality and expertise. </p>
                 </div>
             </div>
 
