--- a/index.html
+++ b/index.html
@@ -53,14 +53,16 @@
             <div class="sales-point-box">
                 <img class="icon" src="assets/images/sales-point-1.svg" alt="">
                 <h3>Ground Preperation</h3>
-                <p>We will prepare the ground and pour concrete to make sure your new playhouse has a solid foundation.</p>
+                <p>We will prepare the ground and pour concrete to make sure your new playhouse has a solid foundation.
+                </p>
                 <a class="button cta-btn" href="services.html">See More</a>
             </div>
 
             <div class="sales-point-box">
                 <img class="icon" src="assets/images/sales-point-2.svg" alt="">
                 <h3>Rubber Matting</h3>
-                <p>Rubber matting will keep your kid safe from falls and other mishaps while being maintance free and looking good.</p>
+                <p>Rubber matting will keep your kid safe from falls and other mishaps while being maintance free and
+                    looking good.</p>
                 <a class="button cta-btn" href="services.html">See More</a>
 
             </div>
@@ -68,7 +70,8 @@
             <div class="sales-point-box">
                 <img class="icon" src="assets/images/sales-point-3.svg" alt="">
                 <h3>Installation</h3>
-                <p>We will install and make sure the new playhouse is secured safely to the foundation and remains for years to come.</p>
+                <p>We will install and make sure the new playhouse is secured safely to the foundation and remains for
+                    years to come.</p>
                 <a class="button cta-btn" href="services.html">See More</a>
 
             </div>
@@ -87,10 +90,11 @@
                 From Co. Galway, We have been providing quality construction services to our clients for over
                 30 years. We pride ourselves on our quality workmanship.
                 We are a team of highly skilled and experienced professionals who are dedicated to providing the best
-                service to our clients. 
+                service to our clients.
 
                 We pay special attention to the quality of our work and providing a safe playarea for our clients.
-                We offer a range of services to our clients including: ground preparation, rubber safety matting, and playhouse installation,
+                We offer a range of services to our clients including: ground preparation, rubber safety matting, and
+                playhouse installation,
                 more of which can be seen <a href="services.html" class="body-link">here</a>.
 
             </p>
@@ -109,19 +113,22 @@
                 <div class="sales-point">
                     <img class="icon" src="assets/images/why-us-point-1.svg" alt="">
                     <h3>Local</h3>
-                    <p>Based in County Galway, and have worked here for years we have come to know the area and the people very well. </p>
+                    <p>Based in County Galway, and have worked here for years we have come to know the area and the
+                        people very well. </p>
                 </div>
 
                 <div class="sales-point">
                     <img class="icon" src="assets/images/why-us-point-2.svg" alt="">
                     <h3>Irish Owned</h3>
-                    <p>Were fully irish owned and source all our materials and playhouses in Ireland and try our best to get local when we can to support the local community. </p>
+                    <p>Were fully irish owned and source all our materials and playhouses in Ireland and try our best to
+                        get local when we can to support the local community. </p>
                 </div>
 
                 <div class="sales-point">
                     <img class="icon" src="assets/images/why-us-point-3.svg" alt="">
                     <h3>Experienced</h3>
-                    <p>With 30 years in construction and 5 years in installing playground we know what were at and can guarantee quality and expertise. </p>
+                    <p>With 30 years in construction and 5 years in installing playground we know what were at and can
+                        guarantee quality and expertise. </p>
                 </div>
             </div>
 
@@ -183,6 +190,11 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
     <script src="assets/js/scripts.js"></script>
+
+    <!-- Cloudflare Web Analytics -->
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js'
+        data-cf-beacon='{"token": "f3e59890944845fa93625cbae427e3c3"}'></script>
+
 </body>
 
 </html>
