--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
           <ul class="unstyled-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -228,7 +229,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
-            <!-- <li><a href="gallery.html">Gallery</a></li> -->
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -238,7 +239,7 @@
         <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
         <p>
           Created by
-          <a href="https://westatlanticdesign.ie">West Atlantic Design</a>
+          <a href="https://joshuaconneely.com">Joshua Conneely</a>
         </p>
       </div>
     </footer>
