--- a/services.html
+++ b/services.html
@@ -72,6 +72,7 @@
           <ul class="unstyled-list">
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -178,7 +179,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="services.html">Services</a></li>
-            <!-- <li><a href="gallery.html">Gallery</a></li> -->
+            <li><a href="gallery.html">Gallery</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
@@ -188,7 +189,7 @@
         <p>Copyright © Dave Conneely 2022. All Rights Reserved.</p>
         <p>
           Created by
-          <a href="https://westatlanticdesign.ie">West Atlantic Design</a>
+          <a href="https://joshuaconneely.com">Joshua Conneely</a>
         </p>
       </div>
     </footer>
